Xuat thuoc toi kho - v1

--- a/304.Manage/BV.Application/QLKHO/KhoChan/XuatThuocTuThien/XuatThuocTuThienCtrl.resx
+++ b/304.Manage/BV.Application/QLKHO/KhoChan/XuatThuocTuThien/XuatThuocTuThienCtrl.resx
@@ -117,4 +117,59 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="PhieuId.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmNo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmTenVatTu.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmDonVi.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmQDThau.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmSoLo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmHSD.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmSoLuong.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmChietKhau.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmDonGia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmThanhTien.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="appearance28.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAM5JREFUKFNjoDqQ8EnlhDIJA2HXxCwRj/SFAi4pblAh3EDINbkAiHcBcT0QLxRw
+        TJKDSmECYdekEiGX5CJh1+QFQPZ2YZfkiXweUbxQaVQANK1UyCUpD0QDFWcKuyRNYGD4D5VFATWMIAVA
+        hblAXAE0PQ2osYPbLVkQqgAVCLqmBAi5pZ0EKioTdktJBTqpU8IuTRgqjQmACiuF3FIzgCYfAtrQglcx
+        g209M9A5W4Q9M5qBJtfyOqfyQWVwAFtbZnH3RBGGmhpGqAi1AAMDAEkJNB4tmE/WAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="appearance42.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAM5JREFUKFNjoDqQ8EnlhDIJA2HXxCwRj/SFAi4pblAh3EDINbkAiHcBcT0QLxRw
+        TJKDSmECYdekEiGX5CJh1+QFQPZ2YZfkiXweUbxQaVQANK1UyCUpD0QDFWcKuyRNYGD4D5VFATWMIAVA
+        hblAXAE0PQ2osYPbLVkQqgAVCLqmBAi5pZ0EKioTdktJBTqpU8IuTRgqjQmACiuF3FIzgCYfAtrQglcx
+        g209M9A5W4Q9M5qBJtfyOqfyQWVwAFtbZnH3RBGGmhpGqAi1AAMDAEkJNB4tmE/WAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
